--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" 
+        content="width=device-width, 
+        initial-scale=1.0">
     <title>Mandaditos Guzman</title>
     <h1>Mandaditos Guzman</h1>
     <h2>Ordena ya!!</h2>
