--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h2>Ordena ya!!</h2>
     <p>Te ofrecemos responsabilidad honestidad y rapidez</p>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" herf="mobile.css"
+        media="max-width: 600px">
 </head>
 <body>
    
